--- a/main.css
+++ b/main.css
@@ -1,7 +1,6 @@
 /*
 MAIN NAVIGATION PAGE
 */
-
 body {
     font-family: 'Raleway';
     color: white;
@@ -22,7 +21,6 @@ body {
     font-family: 'Open Sans';
     font-weight: bold;
     font-size: 3.2rem;
-
 }
 
 .box {
@@ -35,7 +33,6 @@ body {
     -moz-transition: 0.5s ease-out;
     -o-transition: 0.5s ease-out;
     transition: 0.5s ease-out;
-    cursor: pointer;
 }
 
 .logo {
@@ -64,10 +61,6 @@ body {
     height: 40px;
 }
 
-.spacing {
-    height: 80px;
-}
-
 .count {
     color: white;
     font-size: 25px;
@@ -83,10 +76,10 @@ Close Button
     z-index: 100;
     top: 0;
     right: 0;
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     background: #333;
-    font-size: 36px;
+    font-size: 32px;
     text-align: center;
     -webkit-transition: 0.5s ease-out;
     -moz-transition: 0.5s ease-out;
@@ -95,8 +88,19 @@ Close Button
     cursor: pointer;
 }
 
+.close-button span {
+    font-family: "Open Sans";
+    font-weight: bold;
+}
+
 .close-button:hover {
     color: #eeb214;
+}
+
+.close-button:hover .close-button > span {
+    -webkit-box-shadow: 10px 10px 0px -4px rgba(255, 255, 255, 1);
+    -moz-box-shadow: 10px 10px 0px -4px rgba(255, 255, 255, 1);
+    box-shadow: 10px 10px 0px -4px rgba(255, 255, 255, 1);
 }
 
 .landingpage {
@@ -149,7 +153,7 @@ Header
 .header {
     height: 50%;
     width: 100%;
-    min-height: 500px;
+    min-height: 550px;
     background: #f9f9f9 !important;
     position: relative;
 }
@@ -169,11 +173,13 @@ Header
     -moz-transition: 0.2s ease-out;
     -o-transition: 0.2s ease-out;
     transition: 0.2s ease-out;
+
 }
 
 .header-left:hover {
     -webkit-filter: grayscale(100%);
     filter: grayscale(100%);
+    cursor: pointer;
 }
 
 .header-right {
@@ -212,7 +218,7 @@ STORY
 }
 
 .story-para {
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-family: "Montserrat";
 }
 
@@ -344,7 +350,7 @@ TESTIMONIALS
 
 .member {
     text-align: center;
-    width: 20vw;
+    width: 100%;
     margin: 0 auto;
     position: relative;
     -webkit-transition-property: opacity;
@@ -371,7 +377,7 @@ TESTIMONIALS
     -webkit-transition-duration: 0.3s;
     -moz-transition-duration: 0.3s;
     transition-duration: 0.3s;
-    width: 20vw;
+    width: 100%;
 }
 
 .testi-img {
@@ -400,14 +406,13 @@ TESTIMONIALS
     font-size: 2.3rem;
 }
 
-.testimonial-comma {
-    font-size: 10rem;
-    margin-top: -70px;
+.testimonial-comma span {
+    font-size: 12rem;
     letter-spacing: -10px;
 }
 
 .testimonial-para {
-    font-size: 2.2rem;
+    font-size: 1.8rem;
     font-family: "Montserrat";
     -webkit-transition-property: opacity;
     -moz-transition-property: opacity;
@@ -486,4 +491,31 @@ SPONSORSHIPS
 
 .sponsor-row .img-responsive {
     max-height: 115px;
+}
+
+.bottom-info {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    max-height: 95%;
+    overflow: auto;
+    z-index: 9999;
+    padding: 5px;
+    text-align: center;
+    background-color: #171717;
+    font-family: "Open Sans";
+    opacity: 0.5;
+}
+
+@media screen and (min-height: 1080px) {
+    .outreach-box {
+        height: 15vh;
+    }
+}
+
+@media screen and (min-height: 1200px) {
+    .header {
+        min-height: 600px;
+    }
 }
